Mon Nov 29 07:04:58 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Moved the setting of SOVERSION below the include for
          wrapper_macros.GNU and enclose it in a if check for versioned_so
          to be 1.  This allows users to build without versioned shared
          libraries.

          Also, fixed a problem with the realclean target.  The executable
          extension was not added when the installed target was added to the
          CLEANUP_INSTALL macro.

          Thanks to Johnny Willemsen for reporting both of these problems.

Sun Nov 28 22:10:48 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/am_edit:

          Removed old file.  MPC-generated Makefile.am's make this script
          obsolete.

Mon Nov 29 07:36:03 2004  Olli Savia  <ops@iki.fi>

        * apps/JAWS/server/HTTP_Helpers.cpp:
          Added "const" qualifiers to silence compile time warnings.

Sun Nov 28 17:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/notify_serv.mpb:
          Added etcl and dynamicany as base projects to fix link errors in the
          BCB6 Static build

Sun Nov 28 16:16:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * ace/config-vxworks5.x.h:
          Added ACE_HAS_USING_KEYWORD for DIAB compiler.

Sun Nov 28 12:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/MakeProjectCreator/config/ciao_servant_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_servant.mpb:
          Made it possible to overrule the commands for the cidlc compiler, just as
          with TAO_IDL. Needed for cross builds like VxWorks

Sat Nov 27 14:51:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Changed use of 'mkdir -p' to '$(MKDIR)' command for more compatibility.
