@@ -50,7 +50,7 @@ int ACE_TMAIN (int argc, ACE_TCHAR **argv){
 
   // show usage if requested
   if (optsMgr._usage) {
-    optsMgr._show_usage(cerr, ACE_TEXT ("client-opts"));
+    optsMgr._show_usage(stderr, ACE_TEXT ("client-opts"));
     return 1;
   }
 
@@ -65,7 +65,7 @@ int ACE_TMAIN (int argc, ACE_TCHAR **argv){
 
   // check that valid options were specified
   if (optsMgr._error) {
-    cerr << "ERROR: " << ACE_TEXT_ALWAYS_CHAR (optsMgr._error_message) << endl;
+    ACE_OS::fprintf (stderr, "ERROR: %s\n", ACE_TEXT_ALWAYS_CHAR (optsMgr._error_message));
     return 1;
   }
 
