@@ -1,3 +1,14 @@
+Mon Nov 29 15:43:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>
+
+	* performance-tests/SCTP/Options_Manager.h:
+	* performance-tests/SCTP/Options_Manager.cpp:
+	* performance-tests/SCTP/SOCK_SEQPACK_srv.cpp:
+	* performance-tests/SCTP/SOCK_SEQPACK_clt.cpp:
+	* performance-tests/SCTP/SOCK_STREAM_srv.cpp:
+	* performance-tests/SCTP/SOCK_STREAM_clt.cpp:
+	  Fixed problems with use of iostreams for
+	  ACE_LACKS_IOSTREAM_TOTALLY builds (VxWorks DIAB).
+
 Mon Nov 29 07:04:58 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/templates/gnu.mpd:
